updating files and added pipe and pickling for streamlit model

--- a/Precious/ps_final_nlp_model.ipynb
+++ b/Precious/ps_final_nlp_model.ipynb
@@ -17,19 +17,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import pickle\n",
     "\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import RegexpTokenizer\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "\n",
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, classification_report, roc_auc_score\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer"
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,31 +211,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    0.784041\n",
-       "0    0.215959\n",
-       "Name: STATUS, dtype: float64"
+       "1    40001\n",
+       "0    11018\n",
+       "Name: STATUS, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y.value_counts(normalize=True)"
+    "y.value_counts(normalize=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vectorizing Text Data"
+    "### Final NLP Model: Tf-IDF Vectorizer w/Logistic Regression"
    ]
   },
   {
@@ -268,13 +270,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Modeling: Logistic Regression"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -294,6 +289,205 @@
     "# instantiating and fitting logistic regression model w/default parameters and 1000 max iterations\n",
     "logreg = LogisticRegression(max_iter=1000)\n",
     "logreg.fit(X_train_tvec, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preparing Model for Streamlit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function to process input from user\n",
+    "def preprocess_nlp(description, tags):\n",
+    "    processed_tags = tags.replace(' ', '')\n",
+    "    processed_tags = processed_tags.replace('-', '')\n",
+    "    all_text = description + processed_tags\n",
+    "    tokenizer = RegexpTokenizer('\\w+|\\$[\\d.]+|S+')\n",
+    "    token = tokenizer.tokenize(all_text.lower())\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "    lem_token = [lemmatizer.lemmatize(word) for word in token]\n",
+    "    joined_text = ' '.join(lem_token)\n",
+    "    return joined_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# testing function for use w/model pipeline\n",
+    "input_text = preprocess_nlp('single mom of 3 requesting kes 20,000 for farming equipment', '#parent, #womanownedbusiness')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating pipeline for model\n",
+    "nlp_pipe = Pipeline([('tvec', TfidfVectorizer(ngram_range=(1,2), \n",
+    "                                          max_features=10_000, \n",
+    "                                          stop_words={'english'})), \n",
+    "                ('logreg', LogisticRegression(max_iter=1000, random_state=42))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('tvec',\n",
+       "                 TfidfVectorizer(max_features=10000, ngram_range=(1, 2),\n",
+       "                                 stop_words={'english'})),\n",
+       "                ('logreg', LogisticRegression(max_iter=1000, random_state=42))])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fitting pipeline\n",
+    "nlp_pipe.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8374189839013172, 0.8211681693453547)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# scoring pipeline to make sure scores still accurate\n",
+    "nlp_pipe.score(X_train, y_train), nlp_pipe.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# testing model on function output and it's performing well\n",
+    "nlp_pipe.predict([input_text])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading model to pickle for usage in streamlit\n",
+    "pickle.dump(nlp_pipe, open('../nlp_model.p', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading model back in to test\n",
+    "nlp_model = pickle.load(open('../nlp_model.p', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tvec': TfidfVectorizer(max_features=10000, ngram_range=(1, 2), stop_words={'english'}),\n",
+       " 'logreg': LogisticRegression(max_iter=1000, random_state=42)}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# all steps saved in pickled model\n",
+    "nlp_model.named_steps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# testing negative predictions\n",
+    "nlp_model.predict(['married man parent of 8 requesting kes 100,000 to shop'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# testing positive predictions\n",
+    "nlp_model.predict(['single mom of 3 requesting kes 20,000 for farming equipment'])"
    ]
   },
   {
