--- a/Precious/ps_kenya_nlp_corrected.ipynb
+++ b/Precious/ps_kenya_nlp_corrected.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook ..."
+    "This notebook contains exploratory code from Rachel Insler."
    ]
   },
   {
