--- a/Precious/ps_final_nlp_model.ipynb
+++ b/Precious/ps_final_nlp_model.ipynb
@@ -888,7 +888,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#create a dictionary with the probability that a loan will be funded\n",
+    "predict_proba_dict = {'probability (success)' : logreg.predict_proba(X_test_tvec)[:,1],\n",
+    "                     'prediction' : logreg.predict(X_test_tvec),\n",
+    "                     'actual' : y_test,\n",
+    "                     'post_text' : X_test}"
+   ]
   }
  ],
  "metadata": {
