updating file no changes made

--- a/Precious/ps_final_nlp_model.ipynb
+++ b/Precious/ps_final_nlp_model.ipynb
@@ -413,7 +413,7 @@
    "outputs": [],
    "source": [
     "# loading model to pickle for usage in streamlit\n",
-    "pickle.dump(nlp_pipe, open('../nlp_model.p', 'wb'))"
+    "pickle.dump(nlp_pipe, open('../models/nlp_model.p', 'wb'))"
    ]
   },
   {
@@ -423,7 +423,7 @@
    "outputs": [],
    "source": [
     "# loading model back in to test\n",
-    "nlp_model = pickle.load(open('../nlp_model.p', 'rb'))"
+    "nlp_model = pickle.load(open('../models/nlp_model.p', 'rb'))"
    ]
   },
   {
