organizing Precious and NLP model folders

--- a/NLP Model/01_kenya_nlp_models.ipynb
+++ b/NLP Model/01_kenya_nlp_models.ipynb
@@ -250,6 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# creating dataframe with only columns I want to keep for nlp\n",
     "kiva = full_kiva[['LOAN_ID', 'COUNTRY_NAME', 'STATUS', 'DESCRIPTION_TRANSLATED', 'LOAN_USE', 'TAGS']]"
    ]
   },
@@ -343,6 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# creating dataframe of data only from Kenya\n",
     "kiva = kiva[kiva['COUNTRY_NAME']=='Kenya']"
    ]
   },
@@ -403,6 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# creating dataframe only for Tags to perform modeling\n",
     "kiva_tags = kiva[['LOAN_ID', 'STATUS', 'TAGS']]"
    ]
   },
@@ -537,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preprocessing"
+    "### Preprocessing Tags to keep them joined instead of vectorizing each word"
    ]
   },
   {
@@ -848,7 +851,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Modeling"
+    "### Modeling processed_Tags"
    ]
   },
   {
@@ -889,6 +892,7 @@
     }
    ],
    "source": [
+    "# null model values\n",
     "y.value_counts(normalize=True)"
    ]
   },
@@ -898,6 +902,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# vectorizing tags w/default params\n",
     "tvec = TfidfVectorizer()\n",
     "X_train_tvec = tvec.fit_transform(X_train)\n",
     "X_test_tvec = tvec.transform(X_test)"
@@ -909,6 +914,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# vectorizing w/different tuning to compare models to default\n",
     "tv = TfidfVectorizer(ngram_range=(1,2), max_df=2.0, min_df=5)\n",
     "X_train_tv = tv.fit_transform(X_train)\n",
     "X_test_tv = tv.transform(X_test)"
@@ -938,6 +944,7 @@
     }
    ],
    "source": [
+    "# logistic regression w/tuned vectorizer\n",
     "lr = LogisticRegression(max_iter = 1000, solver= 'liblinear', C=100)\n",
     "lr.fit(X_train_tv, y_train)"
    ]
@@ -966,6 +973,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This was the best logistic regression score with all variations of hypertuning including vectorizer. The score only improved by 1 point over the null model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### MultinomialNB"
    ]
   },
@@ -986,6 +1000,7 @@
     }
    ],
    "source": [
+    "# multinomialNB model w/default vectorizer\n",
     "mnb = MultinomialNB()\n",
     "mnb.fit(X_train_tvec, y_train)"
    ]
@@ -1005,7 +1020,7 @@
     }
    ],
    "source": [
-    "# scoring \n",
+    "# scoring for hypertuned vectorizer\n",
     "print(f'Train score: {mnb.score(X_train_tv, y_train)}')\n",
     "print(f'Test score: {mnb.score(X_test_tv, y_test)}')"
    ]
@@ -1025,9 +1040,16 @@
     }
    ],
    "source": [
-    "# scoring \n",
+    "# scoring for default vectorizer\n",
     "print(f'Train score: {mnb.score(X_train_tvec, y_train)}')\n",
     "print(f'Test score: {mnb.score(X_test_tvec, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The hypertuned vectorizer scored better than the default with the MultinomialNB. However, the score is still very close to the null scores."
    ]
   },
   {
@@ -1119,18 +1141,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The AdaBoost model w/100 estimators scored higher than the previous models using the default vectorizer. It's still not the improvement over the null model we're looking for. "
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Combining all text columns \n",
-    "(Was supposed to be with joined tags, but they're not...)"
+    "# Combining all text columns for Modeling\n",
+    "This was supposed to be with joined tags, but they're not. There's not much of a difference between scores with joined or unjoined tags; however, see next notebook for the scoring of those models which were ultimately used for the final nlp model and the streamlit app."
    ]
   },
   {
@@ -1514,6 +1536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# vectorizing joined_text data using 1 and 2 grams\n",
     "tdvec = TfidfVectorizer(ngram_range=(1,2))\n",
     "X_train_tdvec = tdvec.fit_transform(X_train)\n",
     "X_test_tdvec = tdvec.transform(X_test)"
@@ -1588,11 +1611,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using 1 and 2 ngrams for the vectorizer and max iterations of 1000 for the logistic regression produced our best scores out of all the models with an improvement of 4 points over the null scores. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# creating predictions for logreg\n",
     "logreg_preds = logreg.predict(X_test_tdvec)"
    ]
   },
@@ -1662,11 +1693,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Although our logistic regression model is scoring well overall with 82% accuracy, it's not performing well with the expired text data (0). The funded data (1) has low false negatives and predicts 96% correctly (recall score). However, it's only predicting 32% correctly for the expired loans which gives us a high false positive score. With this model we are predicting most loans to be funded and giving those whose text information for their loans are not good enough for funding false hope that they are likely to be funded when they are not for whatever reason. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1700,7 +1731,7 @@
     }
    ],
    "source": [
-    "# scoring \n",
+    "# scoring with default random forest and default vectorizer\n",
     "print(f'Train score: {rfc.score(X_train_tdvec, y_train)}')\n",
     "print(f'Test score: {rfc.score(X_test_tdvec, y_test)}')"
    ]
@@ -1720,9 +1751,16 @@
     }
    ],
    "source": [
-    "# scoring \n",
+    "# scoring with ngrams range of 1,2 in vectorizer\n",
     "print(f'Train score: {rfc.score(X_train_tdvec, y_train)}')\n",
     "print(f'Test score: {rfc.score(X_test_tdvec, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Random Forest model is overfit for the default parameters. The increased ngrams in the vectorizer provide a better fit but the score hasn't improved over the null scores."
    ]
   },
   {
@@ -1768,7 +1806,7 @@
     }
    ],
    "source": [
-    "# scoring \n",
+    "# scoring w/default vectorizer and default adaboost\n",
     "print(f'Train score: {abc.score(X_train_tdvec, y_train)}')\n",
     "print(f'Test score: {abc.score(X_test_tdvec, y_test)}')"
    ]
@@ -1788,9 +1826,16 @@
     }
    ],
    "source": [
-    "# scoring \n",
+    "# scoring with increased estimators of 250 from 50\n",
     "print(f'Train score: {abc.score(X_train_tdvec, y_train)}')\n",
     "print(f'Test score: {abc.score(X_test_tdvec, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This score improved over the null model but not as well as the logistic regression."
    ]
   },
   {
@@ -1842,25 +1887,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This model is also an improvement over the null model but not as well as the logistic regression."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Reproducing logreg score from above to extract features and complete interpretations."
+   ]
   },
   {
    "cell_type": "code",
@@ -1868,6 +1906,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# rereading in data\n",
     "kiva_kenya = pd.read_csv('/Users/precious/dsi/Group-Project/kiva_kenya.csv')"
    ]
   },
@@ -1900,6 +1939,13 @@
    ],
    "source": [
     "kiva_kenya.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Noticed null rows not taken into consideration in above models. Will check original data to be sure they were always null and not as result of saving data to new csv."
    ]
   },
   {
@@ -2288,7 +2334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reproducing logreg score from above to extract features."
+    "### Modeling Combined Text Data to Reproduce Logistic Regression Model from Above Section"
    ]
   },
   {
@@ -2361,7 +2407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# vectorizing data\n",
+    "# vectorizing data added max_features to improve score and produced same results as earlier\n",
     "tdvec = TfidfVectorizer(ngram_range=(1,2), max_features=20_000)\n",
     "X_train_tdvec = tdvec.fit_transform(X_train)\n",
     "X_test_tdvec = tdvec.transform(X_test)"
