--- a/NLP Model/02_kenya_nlp_eda_logreg.ipynb
+++ b/NLP Model/02_kenya_nlp_eda_logreg.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Combine tags, combine text columns, regex, lemmatize, stem, stopwords, save to csv, reread csv and drop nulls, model"
+    "# This notebook is a recreation of the previous notebook with joined tags. Instead of vectorizing each word in a single tag each tag is counted as a single word. \n",
+    "The following steps were taken to process and model the text data: combined tags, combined text columns, regex, lemmatize, stopwords, saved to csv, reread csv and dropped nulls, modeling."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook contains exploratory code from Rachel Insler."
+    "This notebook contains EDA code from Rachel Insler."
    ]
   },
   {
@@ -51,6 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reading in original dataset\n",
     "full_kiva = pd.read_csv('/Users/precious/dsi/Group-Project/kivamix.csv')"
    ]
   },
@@ -60,6 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# keeping only columns I want\n",
     "full_kiva = full_kiva[['LOAN_ID', 'COUNTRY_NAME', 'STATUS', 'DESCRIPTION_TRANSLATED', 'LOAN_USE', 'TAGS']]"
    ]
   },
@@ -69,6 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# creating dataframe of only loans from Kenya\n",
     "kiva = full_kiva[full_kiva['COUNTRY_NAME']=='Kenya']"
    ]
   },
@@ -120,7 +124,15 @@
     }
    ],
    "source": [
+    "# null scores\n",
     "kiva['STATUS'].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning and preprocessing text data."
    ]
   },
   {
@@ -261,26 +273,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Instantiate PorterStemmer.\n",
-    "# p_stemmer = PorterStemmer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# stemming words in all_text \n",
-    "# kiva['all_text'] = [[p_stemmer.stem(token) for token in token_list] for token_list in kiva['all_text']]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -323,6 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# saving processed dataset to new csv for later use\n",
     "kiva.to_csv('/Users/precious/dsi/Group-Project/kenya_joined_tags_full_text.csv', index=False)"
    ]
   },
@@ -450,6 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# rereading in data to remove nulls\n",
     "processed_kiva = pd.read_csv('/Users/precious/dsi/Group-Project/kenya_joined_tags_full_text.csv')"
    ]
   },
@@ -491,6 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# dropping nulls from column being used for modeling\n",
     "processed_kiva.dropna(subset=['joined_text'], axis=0, inplace=True)"
    ]
   },
@@ -524,6 +519,13 @@
    ],
    "source": [
     "processed_kiva.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EDA and Modeling Joined Text w/Joined Tags"
    ]
   },
   {
@@ -564,6 +566,7 @@
     }
    ],
    "source": [
+    "# null model scores\n",
     "y.value_counts(normalize=True)"
    ]
   },
@@ -573,6 +576,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# vectorizing text with 1,2 ngrams and 10,000 max features instead of 20,000 from previous notebook\n",
     "tvec = TfidfVectorizer(ngram_range=(1,2), max_features=10_000)\n",
     "X_train_tvec = tvec.fit_transform(X_train)\n",
     "X_test_tvec = tvec.transform(X_test)"
@@ -625,6 +629,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above chart shows the most occuring words in all of the combined text for both funded and expired loans. We can interpret this as most loan requests are to purchase or buy things for a business that includes a farm or farming. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -644,6 +655,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# creating dataframes of top 15 words for either funded or expired \n",
     "top_success = success_df.sum().sort_values(ascending = False).head(15)\n",
     "top_expired = expired_df.sum().sort_values(ascending = False).head(15)"
    ]
@@ -681,11 +693,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The above charts show us the most frequently used words for funded/successful loans and expired loans. Most of the words are the same for both categories. Mentioning a child, family or group is common. Also mentioning business, farm, farming or farmer. This tells me that most of the people in Kenya who are using kiva.org for loan funding are using it to help their agricultural businesses."
+   ]
   },
   {
    "cell_type": "code",
@@ -706,26 +718,6 @@
    "source": [
     "logreg = LogisticRegression(max_iter=1000)\n",
     "logreg.fit(X_train_tvec, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train score: 0.848268494150142\n",
-      "Test score: 0.8210740248573438\n"
-     ]
-    }
-   ],
-   "source": [
-    "# scoring logistic regression (ngram1,2, max_feat20_000\n",
-    "# print(f'Train score: {logreg.score(X_train_tvec, y_train)}')\n",
-    "# print(f'Test score: {logreg.score(X_test_tvec, y_test)}')"
    ]
   },
   {
@@ -1178,7 +1170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exploring Where and When Classification Errors Happen"
+    "### Exploring Where and When Classification Errors Occur (Adapted from Rachel Insler's Code)"
    ]
   },
   {
@@ -1439,6 +1431,7 @@
     }
    ],
    "source": [
+    "# misclassified by status\n",
     "misclassified['STATUS'].value_counts(normalize=True)"
    ]
   },
@@ -1898,7 +1891,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### False Negatives"
+    "#### Text from Some of the Loans Classified as False Negatives"
    ]
   },
   {
@@ -1944,7 +1937,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### False Positives"
+    "#### Text from Some of the Loans Classified as False Positives"
    ]
   },
   {
@@ -2010,7 +2003,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
