--- a/Precious/ps_02_fulldata_nlp_models_tags.ipynb
+++ b/Precious/ps_02_fulldata_nlp_models_tags.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# NLP Models with Tf-IDF Vectorizer\n",
-    "This notebook has more nlp models with using Tf-IDF Vectorizer. It also has some analysis and models with the TAGS column explicitly."
+    "This notebook uses the full sample of the Kiva dataset prior to parsing for Kenya data only. It has more nlp models using Tf-IDF Vectorizer on all text data with and without combined tags. It also has some models with only the TAGS column."
    ]
   },
   {
@@ -273,7 +273,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modeling w/Tf-IDF Vectorizer"
+    "## Modeling All Text Combined w/Tf-IDF Vectorizer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each model used with default parameters did not improve the r2_score beyond the null model."
    ]
   },
   {
@@ -532,15 +539,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each model used with default parameters did not improve the r2_score beyond the null model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Tag Analysis\n",
-    "Testing models to see if keeping all words from tag together following vectorizing improves the model."
+    "# Tag Preprocessing & Modeling\n",
+    "Testing models to see if keeping all words from tag together following vectorizing improves the model instead of vectorizing each word separately. These models are only for the TAGS column."
    ]
   },
   {
@@ -755,6 +755,7 @@
     }
    ],
    "source": [
+    "# null scores\n",
     "y.value_counts(normalize=True)"
    ]
   },
@@ -996,6 +997,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Scores got worse with this model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### AdaBoost"
    ]
   },
@@ -1038,6 +1046,13 @@
     "# scoring model\n",
     "print(f'Train score: {ada.score(X_train_tv, y_train)}')\n",
     "print(f'Test score: {ada.score(X_test_tv, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No improvement in score over null model."
    ]
   },
   {
@@ -1089,11 +1104,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "No improvement in score from null model. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modeling All Text Columns Combined Using Processed_TAGS Column Created Above"
+   ]
   },
   {
    "cell_type": "code",
@@ -1444,11 +1466,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The Logistic Regression model slightly improved the score over the null model but not enough to deem this a strong model. Score is similar to the score from previous Logistic Regression with each word from tags vectorized instead of together. "
+   ]
   },
   {
    "cell_type": "code",
