--- a/Numeric Model/Step4_Model_for_pickle.ipynb
+++ b/Numeric Model/Step4_Model_for_pickle.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,37 +595,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dropping object columns from the dataset so that Streamlit model can be deployed (dummifying cannot be done or there will be a mismatch)\n",
-    "X_train.drop(columns=['ORIGINAL_LANGUAGE', 'ACTIVITY_NAME', 'SECTOR_NAME','COUNTRY_CODE', 'REPAYMENT_INTERVAL', 'DISTRIBUTION_MODEL'], inplace=True)\n",
-    "X_test.drop(columns=['ORIGINAL_LANGUAGE', 'ACTIVITY_NAME', 'SECTOR_NAME','COUNTRY_CODE', 'REPAYMENT_INTERVAL', 'DISTRIBUTION_MODEL'], inplace=True)"
+    "X_train.drop(columns=['ORIGINAL_LANGUAGE', 'ACTIVITY_NAME', 'SECTOR_NAME','COUNTRY_CODE', 'REPAYMENT_INTERVAL', 'DISTRIBUTION_MODEL', 'month'], inplace=True)\n",
+    "X_test.drop(columns=['ORIGINAL_LANGUAGE', 'ACTIVITY_NAME', 'SECTOR_NAME','COUNTRY_CODE', 'REPAYMENT_INTERVAL', 'DISTRIBUTION_MODEL', 'month'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Defining the pipe\n",
     "pipe_gb = Pipeline([\n",
+    "    ('sc', StandardScaler()),\n",
     "    ('gb', GradientBoostingClassifier(learning_rate=0.1, max_depth=5, n_estimators=100))\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8617760819569308 0.8482163857310858 0.8477680820923827\n"
+      "0.8552163913861593 0.8420227361818895 0.8410255222798011\n"
      ]
     }
    ],
@@ -638,14 +639,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8617760819569308 0.8482163857310858\n"
+      "0.8552163913861593 0.8420227361818895\n"
      ]
     }
    ],
@@ -663,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
