step and numeric model

--- a/Numeric Model/Step3_Model_Build.ipynb
+++ b/Numeric Model/Step3_Model_Build.ipynb
@@ -1379,7 +1379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Random Forest seems to be overfit and with test scores around 0.848"
+    "## Random Forest seems to be overfit with Train at 0.978 and with test scores around 0.848"
    ]
   },
   {
@@ -1688,9 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2575,7 +2573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
